[package]
name = "server"
version = "0.1.0"
authors = ["Ben-PH <benphawke@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.9.0"
actix-web = "2.0.0"
actix-files = "0.2.2"
actix-identity = "*"
actix-multipart = "0.2.0"
actix-rt = "1.1.1"
futures-timer = "3.0.2"
futures = "0.3.5"
rand = "*"
serde = "*"
ring = "*"
pbkdf2 = "*"
env_logger = "*"
log = "0.4.11"
lazy_static = "1.4"
mongodb = "1.0.0"
arangors = {version = "0.4"}#, features = ["surf_async"], default-features = false}
bson = "*"
serde_json = "*"

shared = { path = "../shared" }
